# pecunia

./: Cargo.toml  README.md  install.sh
cfg/: log4rs.dev.yaml  log4rs.prd.yaml  pecunia.dev.json  pecunia.prd.json  state.json
src/: main.rs
src/market/: market.rs  mod.rs
src/market/bitpanda/: bitpanda_api.rs  mod.rs
src/market/bitpanda/model/: balances.rs  bitpanda_error.rs  candlestick.rs  currency.rs  fee_group.rs  market_ticker.rs  mod.rs  order.rs  price_tick.rs
src/model/: mod.rs  pecunia_configuration.rs  state.rs
src/trader/: actions.rs  mod.rs  trader.rs
