[package]
name = "pecunia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0.81"
reqwest = { version = "0.11.10", features = [ "blocking", "json" ] }
chrono = "0.4.19"
log = "0.4.17"
log4rs = "1.1.1"
logstash-rs = "0.1.0"
log4rs-logstash = "0.1.0"
